Fix css on mobile & large screen

--- a/dashboard/css/dashboard-main/nav.css
+++ b/dashboard/css/dashboard-main/nav.css
@@ -71,7 +71,7 @@ background: #e9e9e9 !important;
 
 #nav .category-title {
     padding: 0.55rem 0 0.5rem 1rem;
-    margin: 2rem auto 0.5rem;
+    margin: 2.5rem auto 0.5rem;
     background: #e3e3e3;
     border-radius: 2px 0 0 2px;
     color: #666666;
@@ -139,4 +139,21 @@ background: #e9e9e9 !important;
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: #e9e9e9; 
+}
+
+/* Bottom Skin button */
+#skins-upgrade {
+    padding: 0.25rem !important;
+    text-align: center;
+    font-size: 0.75rem;
+    color: grey;
+    width: 100%;
+    margin: 1.5rem auto 0;
+	cursor: pointer;
+}
+
+#skins-upgrade:hover {
+	background: #006787;
+	border-color: #006787;
+    color: white;
 }
