--- a/dashboard/css/dashboard-pages/welcome.css
+++ b/dashboard/css/dashboard-pages/welcome.css
@@ -332,10 +332,15 @@
     padding: 0.75rem 0.75rem 1rem;
 }
 
+.legend-text {
+    font-weight: normal;
+}
+
 .temp-desc sup {
-    font-size: 0.33rem;
+    font-size: 0.45rem;
     position: relative;
-    top: 0.1rem;
+    top: 0.15rem;
+    font-weight: normal;
 }
 
 .title-temp-legend {
@@ -673,7 +678,7 @@ input:checked + .slider:before {
     float: right;
     position: relative;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: right;
     top: -1.75rem;
     background-size: contain;
 }
